fixed alignment of locations section

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ figure {
     display: flex;
     position: relative;
     top: 150px;
-    left: 10%;
+    left: 20%;
     height: 500px;
     width: 1200px;
     justify-content: center;
